# tester-agent

./: .env.example  .gitignore  CLAUDE.md  README.md  agent.py  create_sample_xlsx.py  excel_io.py  main.py  pyproject.toml  tasks.xlsx
docs/plans/: 2026-02-18-web-task-automation-design.md  2026-02-18-web-task-automation-plan.md  2026-02-19-audio-capture-design.md  2026-02-19-audio-capture-plan.md
tests/: test_agent_tools.py  test_audio_collection.py  test_excel_io.py
